build_output.txt
[1/4] Building CXX object source/CMakeFiles/EndlessSkyLib.dir/Release/text/Font.cpp.obj
FAILED: [code=1] source/CMakeFiles/EndlessSkyLib.dir/Release/text/Font.cpp.obj 
D:\msys\ucrt64\bin\x86_64-w64-mingw32-g++.exe -DAVIF_DLL -DCMAKE_INTDIR=\"Release\" -isystem E:/CODE/endless-sky/build/mingw/vcpkg_installed/x64-mingw-dynamic/include -isystem E:/CODE/endless-sky/build/mingw/vcpkg_installed/x64-mingw-dynamic/include/SDL2 -isystem E:/CODE/endless-sky/build/mingw/vcpkg_installed/x64-mingw-dynamic/include/AL -isystem E:/CODE/endless-sky/build/mingw/vcpkg_installed/x64-mingw-dynamic/include/minizip -O3 -DNDEBUG -std=c++20 -flto=auto -fno-fat-lto-objects -fdiagnostics-color=always -Wall -pedantic-errors -Wold-style-cast -fno-rtti -MD -MT source/CMakeFiles/EndlessSkyLib.dir/Release/text/Font.cpp.obj -MF source\CMakeFiles\EndlessSkyLib.dir\Release\text\Font.cpp.obj.d -o source/CMakeFiles/EndlessSkyLib.dir/Release/text/Font.cpp.obj -c E:/CODE/endless-sky/source/text/Font.cpp
E:/CODE/endless-sky/source/text/Font.cpp: In member function 'std::string Font::TruncateEndsOrMiddle(const std::string&, int&, std::function<std::__cxx11::basic_string<char>(const std::__cxx11::basic_string<char>&, const std::vector<long long unsigned int>&, int)>) const':
E:/CODE/endless-sky/source/text/Font.cpp:497:25: error: no match for call to '(std::function<std::__cxx11::basic_string<char>(const std::__cxx11::basic_string<char>&, const std::vector<long long unsigned int>&, int)>) (const std::string&, int&)'
  497 |   return getResultString(str, workingChars);
      |          ~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
In file included from D:/msys/ucrt64/include/c++/15.2.0/functional:61,
                 from E:/CODE/endless-sky/source/text/Font.h:27,
                 from E:/CODE/endless-sky/source/text/Font.cpp:17:
D:/msys/ucrt64/include/c++/15.2.0/bits/std_function.h:336:11: note: there is 1 candidate
  336 |     class function<_Res(_ArgTypes...)>
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
D:/msys/ucrt64/include/c++/15.2.0/bits/std_function.h:589:7: note: candidate 1: '_Res std::function<_Res(_ArgTypes ...)>::operator()(_ArgTypes ...) const [with _Res = std::__cxx11::basic_string<char>; _ArgTypes = {const std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, const std::vector<long long unsigned int, std::allocator<long long unsigned int> >&, int}]'
  589 |       operator()(_ArgTypes... __args) const
      |       ^~~~~~~~
D:/msys/ucrt64/include/c++/15.2.0/bits/std_function.h:589:7: note: candidate expects 3 arguments, 2 provided
ninja: build stopped: subcommand failed.
